[tool.poetry]
name = "wizdiff"
version = "0.2.0"
description = "wizard101 version diffing automation tool"
authors = ["StarrFox <starrfox6312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.6.0"
aiohttp = "^3.8.1"
aiosqlite = "^0.17.0"
printrospector = {git = "https://gitlab.com/vale_/printrospector", rev = "main"}

[tool.poetry.dev-dependencies]
hypothesis = "^6.17.0"
pytest = "^7.0.1"

[tool.poetry.scripts]
wizdiff = "wizdiff.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
