[tool.poetry]
name = "wizdiff"
version = "0.2.1"
description = "wizard101 version diffing automation tool"
authors = ["StarrFox <starrfox6312@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
loguru = "^0.6.0"
aiohttp = "^3.8.1"
aiosqlite = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
